# Multimodal_Kalman_Filter_Tracking

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  demo_visualization.cpp  demo_visualization_real.cpp  run_demo.sh
config/: tracking_config.yaml
examples/: simple_demo.cpp
include/: data_loader.h  fusion_module.h  kalman_filter.h  object_tracker.h  perception_module.h  types.h  visualization.h
src/: data_loader.cpp  fusion_module.cpp  kalman_filter.cpp  main.cpp  object_tracker.cpp  perception_module.cpp  visualization.cpp
tests/: CMakeLists.txt  test_kalman_filter.cpp
